--- a/config.toml
+++ b/config.toml
@@ -59,203 +59,79 @@ paginate = 10
 #    weight     = 5
 #    parent     = "menu.home"
 
-[[menu.main]]
-    name       = "Features"
-    identifier = "menu.features"
-    url        = "/img/template-easy-customize.png"
-    weight     = 3
+#[[menu.main]]
+#    name       = "Features"
+#    identifier = "menu.features"
+#    url        = "/img/template-easy-customize.png"
+#    weight     = 3
 
-[[menu.main]]
-    name       = "Shortcodes"
-    identifier = "section.shortcodes"
-    url        = ""
-    weight     = 1
-    parent     = "menu.features"
-    post       = 1
+#[[menu.main]]
+#    name       = "Shortcodes"
+#    identifier = "section.shortcodes"
+#    url        = ""
+#    weight     = 1
+#    parent     = "menu.features"
+#    post       = 1
 
-[[menu.main]]
-    name       = "Header variations"
-    identifier = "section.headervariations"
-    url        = ""
-    weight     = 2
-    parent     = "menu.features"
-    post       = 2
+#[[menu.main]]
+#    name       = "Header variations"
+#    identifier = "section.headervariations"
+#    url        = ""
+#    weight     = 2
+#    parent     = "menu.features"
+#    post       = 2
 
-[[menu.main]]
-    name       = "Accordions"
-    url        = ""
-    weight     = 1
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Accordions"
+#    url        = ""
+#    weight     = 1
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Alerts"
-    url        = ""
-    weight     = 2
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Alerts"
+#    url        = ""
+#    weight     = 2
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Buttons"
-    url        = ""
-    weight     = 3
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Buttons"
+#    url        = ""
+#    weight     = 3
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Content Boxes"
-    url        = ""
-    weight     = 4
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Content Boxes"
+#    url        = ""
+#    weight     = 4
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Horizontal Blocks"
-    url        = ""
-    weight     = 5
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Horizontal Blocks"
+#    url        = ""
+#    weight     = 5
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Pagination"
-    url        = ""
-    weight     = 6
-    parent     = "section.shortcodes"
+#[[menu.main]]
+#    name       = "Pagination"
+#    url        = ""
+#    weight     = 6
+#    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Tabs"
-    url        = ""
-    weight     = 7
-    parent     = "section.shortcodes"
 
-[[menu.main]]
-    name       = "Typography"
-    url        = ""
-    weight     = 8
-    parent     = "section.shortcodes"
-
-[[menu.main]]
-    name       = "Default Sticky Header"
-    url        = ""
-    weight     = 1
-    parent     = "section.headervariations"
-
-[[menu.main]]
-    name       = "No Sticky Header"
-    url        = ""
-    weight     = 2
-    parent     = "section.headervariations"
-
-[[menu.main]]
-    name       = "Light Header"
-    url        = ""
-    weight     = 3
-    parent     = "section.headervariations"
-
-[[menu.main]]
-    name       = "Portfolio"
-    identifier = "menu.portfolio"
-    url        = "/img/template-homepage.png"
-    weight     = 3
-
-[[menu.main]]
-    name       = "Portfolio"
-    identifier = "section.portfolio"
-    url        = ""
-    weight     = 1
-    parent     = "menu.portfolio"
-    post       = 1
-
-[[menu.main]]
-    name       = "2 Columns"
-    url        = ""
-    weight     = 1
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "2 Columns With Negative Space"
-    url        = ""
-    weight     = 2
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "3 Columns"
-    url        = ""
-    weight     = 3
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "3 Columns With Negative Space"
-    url        = ""
-    weight     = 4
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "4 Columns"
-    url        = ""
-    weight     = 5
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "4 Columns With Negative Space"
-    url        = ""
-    weight     = 6
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "Portfolio - detail"
-    url        = ""
-    weight     = 7
-    parent     = "section.portfolio"
-
-[[menu.main]]
-    name       = "Portfolio - detail 2"
-    url        = ""
-    weight     = 8
-    parent     = "section.portfolio"
 
 [[menu.main]]
     name       = "About"
-    identifier = "section.about"
-    url        = ""
-    weight     = 2
-    parent     = "menu.portfolio"
-    post       = 2
-
-[[menu.main]]
-    name       = "About Us"
-    url        = ""
-    weight     = 1
-    parent     = "section.about"
-
-[[menu.main]]
-    name       = "Our Team"
-    url        = ""
-    weight     = 2
-    parent     = "section.about"
-
-[[menu.main]]
-    name       = "Marketing"
-    identifier = "section.marketing"
-    url        = ""
-    weight     = 3
-    parent     = "menu.portfolio"
-    post       = 2
-
-[[menu.main]]
-    name       = "Packages"
-    url        = ""
-    weight     = 1
-    parent     = "section.marketing"
-
-[[menu.main]]
-    name       = "All Pages"
     identifier = "menu.allpages"
     url        = ""
     weight     = 4
 
-[[menu.main]]
-    name       = "Home"
-    identifier = "section.ap-home"
-    url        = ""
-    weight     = 1
-    parent     = "menu.allpages"
-    post       = 1
+#[[menu.main]]
+#    name       = "Home"
+#    identifier = "section.ap-home"
+#    url        = ""
+#    weight     = 1
+#    parent     = "menu.allpages"
+#    post       = 1
 
 [[menu.main]]
     name       = "About"
@@ -266,12 +142,12 @@ paginate = 10
     post       = 1
 
 [[menu.main]]
-    name       = "Marketing"
+    name       = "Dipbits Tech API`s"
     identifier = "section.ap-marketing"
     url        = ""
     weight     = 3
     parent     = "menu.allpages"
-    post       = 1
+    post       = 4
 
 [[menu.main]]
     name       = "Portfolio"
@@ -281,59 +157,67 @@ paginate = 10
     parent     = "menu.allpages"
     post       = 2
 
-[[menu.main]]
-    name       = "User Pages"
-    identifier = "section.ap-userpages"
-    url        = ""
-    weight     = 2
-    parent     = "menu.allpages"
-    post       = 2
+#[[menu.main]]
+#    name       = "User Pages"
+#    identifier = "section.ap-userpages"
+#    url        = ""
+#    weight     = 2
+#    parent     = "menu.allpages"
+#    post       = 2
+
+#[[menu.main]]
+#    name       = "Shop"
+#    identifier = "section.ap-shop"
+#    url        = ""
+#    weight     = 1
+#    parent     = "menu.allpages"
+#    post       = 3
+
+#[[menu.main]]
+#    name       = "Shop - Order Process"
+#    identifier = "section.ap-shoporderprocess"
+#    url        = ""
+#    weight     = 2
+#    parent     = "menu.allpages"
+#    post       = 3
+
+#[[menu.main]]
+#    name       = "Contact"
+#    identifier = "section.ap-contact"
+#    url        = ""
+#    weight     = 1
+#    parent     = "menu.allpages"
+#    post       = 3
 
 [[menu.main]]
-    name       = "Shop"
-    identifier = "section.ap-shop"
-    url        = ""
-    weight     = 1
-    parent     = "menu.allpages"
-    post       = 3
-
-[[menu.main]]
-    name       = "Shop - Order Process"
-    identifier = "section.ap-shoporderprocess"
-    url        = ""
-    weight     = 2
-    parent     = "menu.allpages"
-    post       = 3
-
-[[menu.main]]
-    name       = "Contact"
-    identifier = "section.ap-contact"
-    url        = ""
-    weight     = 1
-    parent     = "menu.allpages"
-    post       = 4
-
-[[menu.main]]
-    name       = "Pages"
+    name       = "Dipbits Products"
     identifier = "section.ap-pages"
     url        = ""
     weight     = 2
     parent     = "menu.allpages"
-    post       = 4
+    post       = 3
 
-[[menu.main]]
-    name       = "Blog"
-    identifier = "section.ap-blog"
-    url        = "/blog/"
-    weight     = 3
-    parent     = "menu.allpages"
-    post       = 4
+#[[menu.main]]
+#    name       = "Pages"
+#    identifier = "section.ap-pages"
+#    url        = ""
+#    weight     = 2
+#    parent     = "menu.allpages"
+#    post       = 3
 
-[[menu.main]]
-    name       = "Blog Listing Big"
-    url        = "/blog/"
-    weight     = 1
-    parent     = "section.ap-blog"
+#[[menu.main]]
+#    name       = "Blog"
+#    identifier = "section.ap-blog"
+#    url        = "/blog/"
+#    weight     = 3
+#    parent     = "menu.allpages"
+#    post       = 4
+
+#[[menu.main]]
+#    name       = "Blog Listing Big"
+#    url        = "/blog/"
+#    weight     = 1
+#    parent     = "section.ap-blog"
 
 [[menu.main]]
     name       = "Blog"
