--- a/data/features/seo.yaml
+++ b/data/features/seo.yaml
@@ -2,4 +2,4 @@ weight: 3
 name: "SEO and SEM"
 icon: "fas fa-globe"
 url: ""
-description: "Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect."
+description: "We provide high Free on organic search strategies, and SEM with a cost on paid advertising."
