--- a/data/features/webdesign.yaml
+++ b/data/features/webdesign.yaml
@@ -2,4 +2,4 @@ weight: 1
 name: "Webdesign"
 icon: "fas fa-desktop"
 url: ""
-description: "Fifth abundantly made Give sixth hath. Cattle creature i be don't them behold green moved fowl Moved life us beast good yielding. Have bring."
+description: "Create and maintain websites. We also responsible for the site's technical aspects, such as its performance and capacity, which are measures of a website's speed and how much traffic the site can handle."
