modified the home page and updated icons on page

--- a/config.toml
+++ b/config.toml
@@ -421,7 +421,7 @@ paginate = 10
 [params.recent_posts]
     enable = true
     title = "From our blog"
-    subtitle = "Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo."
+    subtitle = " Find computer programming blogs, coding blog, programing languages, programming languages, program blog and much more."
     hide_summary = false
 
 [params.footer.recent_posts]
