--- a/data/features/it-consultancy.yaml
+++ b/data/features/it-consultancy.yaml
@@ -1,5 +1,5 @@
 weight: 2
 name: "IT Consultancy"
-icon: "fas fa-print"
+icon: "fab fa-accusoft"
 url: ""
 description: "Advisory services that help clients assess different technology strategies and, in doing so, align their technology strategies with their business or process strategies."
